# llmarena

./: .env.example  .gitignore  README.md  README_euler.md  pyproject.toml
configs/: exclude.txt  exclude_website.txt
configs/agent_scaffolds/: selfcheck.yaml  standard.yaml
configs/anthropic/: claude-35.yaml  claude-37.yaml
configs/autograding/: config.yaml
configs/deepseek/: deepseek_distill_1.5b.yaml  deepseek_distill_14b.yaml  deepseek_distill_32b.yaml  deepseek_distill_70b.yaml  deepseek_r1.yaml
configs/gemini/: gemini-flash-2.0.yaml  gemini-flash-thinking-2.0.yaml
configs/models/: exclude.txt  exclude_website.txt  include.txt
configs/openai/: gpt-4o.yaml  o1.yaml  o3-mini--low.yaml  o3-mini--medium.yaml  o3-mini.yaml
configs/other/: limo.yaml  s1.yaml
configs/qwen/: qwq-preview.yaml  qwq.yaml
docs/: BLOG_GUIDE.md
latex/: aime_aime_2025_II_merged.tex  aime_aime_2025_I_merged.tex  hmmt_hmmt_feb_2025_merged.tex  main.tex
logs/broken_runs/: 1761761301.json  1761762323.json  1761767567.json  1761770280.json
scripts/: app.py  check_latex.py  grade.py  list_models.py  merge_competitions.py  nuke_single_run.py  prepare_agieval_data.py  prepare_gpqa_data.py  prepare_mmmu_data.py  regrade.py  run.py  run.sh  run_all_fa.sh  run_all_kangaroo.sh  run_multiple.py  run_parallel.py  run_parallel_models.sh  test_load_problems.py  upload_outputs.py
scripts/bedrock/: test_bedrock_models.py
scripts/curation/: check_latex.py  judge_parser.py  nuke_problems.py  reparse_all.py  test_parser_changes.py  update_price.py  upload_competition.py  upload_outputs.py  upload_outputs_s3.py
scripts/euler/: add_euler.py  project_euler_submit.py
scripts/extraction/: comparison.py  (+7 more)
tests/: test_code_execution.py
(+207 files in other folders)
