[project]
name = "matharena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mislav Balunovic", email = "mislav.balunovic@inf.ethz.ch" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.45.2",
    "beautifulsoup4>=4.13.1",
    "google-genai>=0.8.0",
    "loguru>=0.7.3",
    "openai>=1.61.0",
    "python-fasthtml>=0.12.1",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "together>=1.3.14",
    # "vllm >= 0.7.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["website"]
